@@ -17,7 +17,7 @@ public class StartUI {
         this.output = output;
     }
 
-    public void init(Input input, Tracker tracker, List<UserAction> actions) {
+    public void init(Input input, Store tracker, List<UserAction> actions) {
         boolean run = true;
         while (run) {
             showMenu(actions);
@@ -40,19 +40,38 @@ public class StartUI {
 
     public static void main(String[] args) {
         Output output = new ConsoleOutput();
-        Input input = new ValidateInput(output, new ConsoleInput());
-        Tracker tracker = new Tracker();
-        UserAction[] actionsArray = new UserAction[]{
-                new CreateAction(output),
-                new FindAllAction(output),
-                new ReplaceAction(output),
-                new DeleteAction(output),
-                new FindByIdAction(output),
-                new FindByNameAction(output),
-                new ExitAction(output)
-        };
-        List<UserAction> actions = Arrays.asList(actionsArray);
-        new StartUI(output).init(input, tracker, actions);
+        Input input = new ValidateInput(
+                output, new ConsoleInput()
+        );
+        try (Store tracker = new SqlTracker()) {
+            List<UserAction> actions = List.of(
+                    new CreateAction(output),
+                    new ReplaceAction(output),
+                    new DeleteAction(output),
+                    new FindAllAction(output),
+                    new FindByIdAction(output),
+                    new FindByNameAction(output),
+                    new ExitAction(output)
+            );
+            new StartUI(output).init(input, tracker, actions);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+
+//        Output output = new ConsoleOutput();
+//        Input input = new ValidateInput(output, new ConsoleInput());
+//        MemTracker tracker = new MemTracker();
+//        UserAction[] actionsArray = new UserAction[]{
+//                new CreateAction(output),
+//                new FindAllAction(output),
+//                new ReplaceAction(output),
+//                new DeleteAction(output),
+//                new FindByIdAction(output),
+//                new FindByNameAction(output),
+//                new ExitAction(output)
+//        };
+//        List<UserAction> actions = Arrays.asList(actionsArray);
+//        new StartUI(output).init(input, tracker, actions);
     }
 
 }
